--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.2.0'
     implementation 'com.google.firebase:firebase-core:19.0.0'
     implementation 'com.karumi:dexter:6.2.3'
+    implementation 'com.yarolegovich:sliding-root-nav:1.1.1'
 }
